--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 
 <p>This is a jQuery plugin to provide the "typewriter" effect. More precisely, it makes content on your website look like it's being typed right at the moment the visitor is looking to the page.</p>
 
+<h2>Demo</h2>
+
+<a href="demo.html" class="nbtn">View a demo</a>
+
 <h2>Usage</h2>
 
 <p>Usage is pretty straightforward. Either <a href="https://github.com/tobalsan/livetype/archive/master.zip">download the files</a> or <a href="https://github.com/tobalsan/livetype">Clone the repository on github</a> to your project folder.</p>
@@ -105,7 +109,7 @@
       </footer>
     </div>
 
-    
+
 
   </body>
 </html>
