--- a/demo.html
+++ b/demo.html
@@ -54,7 +54,7 @@
     </div>
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
-    <script src="js/jquery.liveType.min.js"></script>
+    <script src="js/jquery.liveType.js"></script>
 
     <script type="text/javascript">
         $(document).ready(function(){
